# langchain

./: README.md  pyproject.toml
video-tutorial/: 10-chains-branching.py  3-chatmodelBascSetup.py  4-chat_model_conversation_realtime.py  5-prompt_template_basic.py  7-chains-basic-example.py  8-chains-under-the-hood.py  9-chains-parallel.py
video-tutorial/11-rag-intro/: 11-rag-intro.py  Dubai.txt
